// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryIcon renders default inventory icon 1`] = `
<svg-icon
  class="inline"
  name="inventory/inventory"
/>
`;

exports[`InventoryIcon renders package inventory icon 1`] = `
<svg-icon
  class="inline"
  name="inventory/package"
/>
`;
